# tiferet-flask

./: AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py  test.py  test_app.py
.github/workflows/: python-publish.yml
docs/guides/domain/: flask_blueprint.md  flask_route.md
docs/guides/events/: get_flask_blueprints.md  get_flask_route.md  get_flask_status_code.md
example/: README.md  calc_flask_api.py
example/app/configs/: app.yml  container.yml  error.yml  feature.yml  openapi.yml
example/app/events/: calc.py
example/app/utils/: calc.py
tiferet_flask/: __init__.py
tiferet_flask/blueprints/: __init__.py  flask.py
tiferet_flask/blueprints/tests/: test_flask.py
tiferet_flask/builders/: __init__.py  flask.py
tiferet_flask/contexts/: __init__.py  feature.py  flask.py  request.py
tiferet_flask/contexts/tests/: test_flask.py  test_request.py
tiferet_flask/contracts/: __init__.py  flask.py
tiferet_flask/data/: __init__.py  error.py  feature.py  flask.py
tiferet_flask/data/tests/: test_flask.py
tiferet_flask/domain/: __init__.py  flask.py
tiferet_flask/domain/tests/: test_flask.py
tiferet_flask/events/: __init__.py  flask.py
tiferet_flask/events/tests/: test_flask.py
tiferet_flask/handlers/: flask.py
tiferet_flask/handlers/tests/: test_flask.py
tiferet_flask/interfaces/: __init__.py  flask.py
tiferet_flask/mappers/: __init__.py  flask.py
tiferet_flask/mappers/tests/: test_flask.py
tiferet_flask/models/: __init__.py  error.py  feature.py  flask.py
tiferet_flask/repos/: __init__.py  flask.py
(+5 files in other folders)
