[project]
name = "tiferet-flask"
dynamic = ["version"]  # Mark version as dynamic
description = "An extension of the Tiferet Framework for the Flask API."
authors = [
    { name = "Andrew Shatz, Great Strength Systems", email = "andrew@greatstrength.me" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tiferet>=2.0.0a8",
    "flask>=3.1.2",
    "flask_cors>=6.0.1"
]

[project.urls]
Homepage = "https://github.com/greatstrength/tiferet-flask"
Repository = "https://github.com/greatstrength/tiferet-flask"
Download = "https://github.com/greatstrength/tiferet-flask"

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest_env>=1.1.5"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "tiferet_flask",
    "tiferet_flask.contexts",
    "tiferet_flask.domain",
    "tiferet_flask.events",
    "tiferet_flask.interfaces",
    "tiferet_flask.mappers",
    "tiferet_flask.repos"
]

[tool.setuptools.dynamic]
version = { attr = "tiferet_flask.__version__" }

